<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/medium_margin"
    android:paddingRight="@dimen/medium_margin">

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:text="@string/enter_password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/abc_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvProceed"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/medium_margin"
        android:text="@string/abc_proceed"
        android:textColor="@color/colorAccent" />

</LinearLayout>