<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg"
    android:padding="@dimen/large_margin">

    <TextView
        android:id="@+id/tvQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        tools:text="QUESTION: 1/4" />

    <TextView
        android:id="@+id/tvCurrentScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textSize="20sp"
        android:text="@string/abc_current_score"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tvCurrentScoreText"
        android:textColor="@color/light_purple"
        android:textSize="100sp"
        android:textStyle="bold"
        tools:text="10" />

    <TextView
        android:id="@+id/tvResultInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answerBox"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        tools:text="Congratulations!\n You’ve gotten the correct answer." />

    <com.media2359.mediacorpspellinggame.widget.SecondsClockView
        android:id="@+id/clockView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvQuestionCount"
        android:layout_marginTop="@dimen/medium_margin" />

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo_big"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tvResultInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.media2359.mediacorpspellinggame.widget.AnswerBox
        android:id="@+id/answerBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/NextButton"
        android:text="@string/abc_submit"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/answerBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btnNext"
        style="@style/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/abc_next" />

    <FrameLayout
        android:id="@+id/flScoreCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerBox"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_centerHorizontal="true">

        <include layout="@layout/view_score_card" />

    </FrameLayout>

</RelativeLayout>