<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg"
    android:padding="@dimen/large_margin">

    <TextView
        android:id="@+id/tvQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="QUESTION: 1/4" />

    <com.media2359.mediacorpspellinggame.widget.MinutesClockView
        android:id="@+id/clockView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvQuestionCount" />

    <TextView
        android:id="@+id/tvCurrentScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/abc_current_score"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tvCurrentScoreText"
        android:textColor="@color/light_purple"
        android:textSize="80sp"
        android:textStyle="bold"
        tools:text="10" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recyclerView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_big" />

    <TextView
        android:id="@+id/tvResultInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:text="You’ve answered 8/10 questions correctly." />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clockView"
        android:layout_marginTop="@dimen/medium_margin" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/abc_submit" />

    <Button
        android:id="@+id/btnNext"
        style="@style/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/abc_next" />

    <Button
        android:id="@+id/btnEdit"
        style="@style/EditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_toLeftOf="@+id/btnNext"
        android:text="திருத்து" />

    <FrameLayout
        android:id="@+id/flScoreCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_below="@+id/recyclerView"
        android:layout_centerHorizontal="true">

        <include layout="@layout/view_score_card" />
    </FrameLayout>

</RelativeLayout>