<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg"
    android:padding="@dimen/large_margin">

    <TextView
        android:id="@+id/tvQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="QUESTION: 1/4" />

    <TextView
        android:id="@+id/tvCurrentScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="CURRENT SCORE"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tvCurrentScoreText"
        android:textColor="@color/light_purple"
        android:textSize="100sp"
        android:textStyle="bold"
        tools:text="10" />

    <TextView
        android:id="@+id/tvResultInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etAnswer"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        tools:text="Congratulations!\n You’ve gotten the correct answer." />

    <com.media2359.mediacorpspellinggame.widget.SecondsClockView
        android:id="@+id/clockView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvQuestionCount"
        android:layout_marginTop="@dimen/medium_margin" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvResultInstruction"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_big" />

    <EditText
        android:id="@+id/etAnswer"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:freezesText="true"
        android:imeOptions="actionDone"
        android:textSize="20sp"
        android:privateImeOptions="nm" />


    <FrameLayout
        android:id="@+id/flScoreCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_below="@+id/btnCorrect"
        android:layout_centerHorizontal="true">

        <include layout="@layout/view_score_card" />

    </FrameLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAnswer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/abc_submit" />


    <Button
        android:id="@+id/btnNext"
        style="@style/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/abc_next" />

    <Button
        android:id="@+id/btnEdit"
        style="@style/EditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_toLeftOf="@+id/btnNext"
        android:text="@string/abc_edit" />

    <ImageButton
        android:id="@+id/btnCorrect"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingTop="@dimen/medium_margin"
        android:paddingBottom="@dimen/medium_margin"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:backgroundTint="@color/green"
        android:src="@drawable/ic_check_24dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAnswer"
        android:layout_alignEnd="@+id/etAnswer" />

    <ImageButton
        android:id="@+id/btnWrong"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingTop="@dimen/medium_margin"
        android:paddingBottom="@dimen/medium_margin"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:backgroundTint="@color/red"
        android:src="@drawable/ic_close_24dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAnswer"
        android:layout_alignStart="@+id/etAnswer" />

</RelativeLayout>